--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.5.1",
+    "@project-serum/anchor": "^0.26.0",
+    "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.95.0",
     "bs58": "^6.0.0",
     "nuxt": "^3.12.3",
     "nuxt-primevue": "^3.0.0",
     "pinia": "^2.1.7",
     "primeicons": "^7.0.0",
+    "solana-wallets-vue": "^0.6.1",
     "vue": "latest"
   }
 }
