--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@jup-ag/core": "^4.0.0-beta.21",
     "@pinia/nuxt": "^0.5.1",
     "@project-serum/anchor": "^0.26.0",
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.95.0",
     "bs58": "^6.0.0",
+    "cross-fetch": "^4.0.0",
     "crypto-js": "^4.2.0",
     "nuxt": "^3.12.3",
     "nuxt-primevue": "^3.0.0",
